--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi[standard]>=0.115.12",
-    "requests>=2.32.3",
+    "fastapi>=0.115.12",
+    "hishel>=0.1.1",
+    "uvicorn>=0.34.0",
 ]
